fix: thriftコンパイラ移行に伴うメソッド名変更対応
Signed-off-by: Zenichi Amano <zenichi.amano@gahojin.co.jp>